--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
     "isomorphic-fetch": "^2.2.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "sails.io.js": "^1.1.13",
+    "socket.io-client": "^2.0.4"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
