--- a/backend/inventory-app/package.json
+++ b/backend/inventory-app/package.json
@@ -21,11 +21,12 @@
     "include-all": "^1.0.0",
     "rc": "1.0.1",
     "sails": "~0.12.13",
-    "sails-disk": "~0.10.9"
+    "sails-disk": "~0.10.9",
+    "sails-mongo": "^0.12.2"
   },
   "scripts": {
     "debug": "node debug app.js",
-    "start": "node app.js"
+    "start": "nodemon ./app.js"
   },
   "main": "app.js",
   "repository": {
