--- a/backend/inventory-app/package.json
+++ b/backend/inventory-app/package.json
@@ -5,6 +5,7 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "connect-mongo": "^2.0.1",
     "ejs": " 2.5.5",
     "grunt": "1.0.1",
     "grunt-contrib-clean": "1.0.0",
@@ -22,6 +23,7 @@
     "rc": "1.0.1",
     "sails": "~0.12.13",
     "sails-disk": "~0.10.9",
+    "sails-hook-mongo-auto-index": "^0.1.3",
     "sails-mongo": "^0.12.2"
   },
   "scripts": {
