Start of setting up user creds

--- a/backend/inventory-app/package.json
+++ b/backend/inventory-app/package.json
@@ -5,6 +5,7 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "connect-mongo": "^2.0.1",
     "ejs": " 2.5.5",
     "grunt": "1.0.1",
@@ -20,6 +21,9 @@
     "grunt-sails-linker": "~0.10.1",
     "grunt-sync": "0.5.2",
     "include-all": "^1.0.0",
+    "jsonwebtoken": "^8.2.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "rc": "1.0.1",
     "sails": "~0.12.13",
     "sails-disk": "~0.10.9",
